--- a/src/Comp/Overwatch.css
+++ b/src/Comp/Overwatch.css
@@ -1,13 +1,22 @@
 .parent
 {
     background-color:bisque;    
-    width: 100%;
-    height: 300px;
+    padding: 50px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 2rem;
 
 }
 .child{
-    
+    background-color:bisque; 
+    min-height: 500px;
+    width: 500px;
+    border: black;
+}
+.child-1{
+
+}
+
+.child-2{
+    grid-row: span 2;
 }
