--- a/src/Comp/movie.css
+++ b/src/Comp/movie.css
@@ -64,7 +64,7 @@ h2 {
     font-size: 30px;
     color: rgb(0, 0, 0);
 }
-.parent
+.parent_1
 {
     background-color:bisque;    
     width: 100%;
@@ -74,11 +74,13 @@ h2 {
     grid-gap: 10px;
 
 }
-.child{
+.child_1{
     
 }
-.child-2{
-    position: fixed;bottom: 0;z-index: 100
+.child_1-2{
+    position: fixed;
+    bottom: 0;
+    z-index: 0
 }
 .myImg {
     border-radius: 5px;
